--- a/styles.css
+++ b/styles.css
@@ -2,17 +2,18 @@ html {
   box-sizing: border-box;
 }
 
-*, *::before, *::after {
+*,
+*::before,
+*::after {
   box-sizing: inherit;
   margin: 0;
   padding: 0;
 }
 
 body {
- font-family:
- -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen-Sans,
-  Ubuntu, Cantarell, 'Helvetica Neue', sans-serif;
- line-height: 1.4;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
+  line-height: 1.4;
 }
 
 .container {
@@ -80,7 +81,7 @@ input[type="checkbox"] {
 }
 
 .tick::before {
-  content: '✓';
+  content: "✓";
   font-size: 20px;
   display: none;
 }
@@ -113,4 +114,25 @@ input[type="text"] {
   padding: 10px;
   border-radius: 4px;
   border: 3px solid #333;
+}
+.empty-state {
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  display: flex;
+}
+
+.checklist-icon {
+  margin-bottom: 20px;
+}
+
+.empty-state__title,
+.empty-state__description {
+  margin-bottom: 20px;
+}
+.todo-list:empty {
+  display: none;
+}
+.todo-list:empty + .empty-state {
+  display: flex;
 }
